# fre-service

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: docker-build-publish.yml
cloud/: CMakeLists.txt
cloud/include/: URL.h  cloud.h
cloud/src/: URL.cpp  cloud.cpp
libfxtract/: CMakeLists.txt
libfxtract/src/: Processor.cpp
libfxtract/src/cad-file-reader/: CadFileReaderFactory.cpp
libfxtract/src/sheet-metal-component/: SheetMetal.cpp
msgqueue/: Mapper.cpp
msgqueue/amqp/: AMQPEventEmitter.cpp  AMQPEventListener.cpp  AMQPEventListener.h
msgqueue/contracts/: FeatureRecognitionComplete.cpp  FeatureRecognitionComplete.h  FeatureRecognitionStarted.cpp  FeatureRecognitionStarted.h  ProcessPlanningComplete.cpp  ProcessPlanningComplete.h  ProcessPlanningStarted.cpp  ProcessPlanningStarted.h
